[package]
authors = ["Johan Nielsen <sejr@google.com>"]
build = "build.rs"
name = "hat-backup"
version = "0.0.1-pre"

[profile.release]
debug = true

[lib]
name = "hat"
path = "src/lib.rs"

[[bin]]
name = "hatbin"
path = "src/main.rs"

[build-dependencies]
capnpc = "*"

[dependencies]
arrayref = "*"
byteorder = "*"
capnp = "*"
clap = "*"
chrono = "*"
env_logger = "*"
error-type = "0.1.2"
libsodium-sys = "*"
log = "*"
quickcheck = "*"
rand = "*"
hex = "*"
secstr = "*"
time = "*"
void = "1"
scoped-pool = "*"
filetime = "*"

[dependencies.argon2rs]
version = "*"

[dependencies.diesel]
default-features = false
features = ["sqlite"]
version = "^0.11.4"

[dependencies.diesel_codegen]
default-features = false
features = ["sqlite"]
version = "^0.11.0"

[features]
default = []

# Allow for simd intrinsics for performance increase.
# This is not supported on stable or beta yet.
simd = ["argon2rs/simd"]

# Running our benchmarks currently requires
# running on nightly. Use this feature to enable
# the code for this.
benchmarks = []
